[package]
name = "job_scheduler"
version = "0.1.0"
edition = "2021"
authors = ["Aaron Perez <aap7640@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
cron = "0.12.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "macros", "time"] }

[dev-dependencies]
rand = "0.8.5"
chrono-tz = "0.8.2"

[lib]
path = "src/lib.rs"
