[package]
name = "job_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
cron = "0.12.0"
env_logger = "0.10.0"
log = "0.4.19"
tokio = { version = "1.29.1", features = ["sync", "time", "rt", "macros"] }
