[package]
name = "route-data-collect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "signal"] }
tonic = { version = "0.9.2", features = ["transport", "codegen", "prost", "channel"] }
serde = { version = "1.0.160", features = ["derive"] }
prost-types = "0.11.9"
env_logger = "0.10.0"
log = "0.4.17"
prost-build = "0.11.9"
serde_json = "1.0.96"
futures = "0.3.28"
job_scheduler = { path = "../job_scheduler" }
chrono = "0.4.24"
cron = "0.12.0"

[build-dependencies]
tonic-build = "0.9"
prost-build = "0.11.9"

[[bin]]
name = "routedatacollect-server"
path = "src/server_main.rs"

[[bin]]
name = "routedatacollect-client"
path = "src/client.rs"
